# wasm-llm

./: .gitignore  MODEL.md  README.md  deploy.sh
.github/workflows/: CI.yml  build-wheels.sh  build.yml  publish.yml
wasm-bot/: README.md  app.py  conversations.py  requirements.txt  service.py
wasm-chat/: .gitignore  Cargo.toml  README.md  pyproject.toml  test.py
wasm-chat/src/: lib.rs
wasm-chat/tests/: test_wasm_chat.py
wasm-infer/: Cargo.toml  wasm_infer.wasm
wasm-infer/src/: lib.rs
wasm-rag/: README.md  app.py  knowledgebase.py  requirements.txt
wasm-rag-service/: README.md  app.py  knowledgebase.py  main.py  requirements.txt
