[package]
name = "wasm-chat"
version = "0.1.1"
edition = "2021"
authors = ["Second State Inc."]

[lib]
name = "wasm_chat"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.20.0"
wasmedge-sdk = { version = "0.13.2", features = ["wasi_nn"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0.30"
endpoints = "0.1"
once_cell = "1.18"
chat-prompts = "0.3.0"
