[package]
name = "wasm-infer"
version = "0.1.0-alpha"
edition = "2021"
authors = ["Second State Inc."]

[lib]
crate-type = ["cdylib"]

[dependencies]
once_cell = "1.18"
wasi-nn = { git = "https://github.com/second-state/wasmedge-wasi-nn", branch = "refactor-execution-context" }
wasmedge-bindgen = "0.4.1"
wasmedge-bindgen-macro = "0.4.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
